Removed unnecessary files, updated index.html and glyph.js

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <div class="inner" id="controls" height="500px">
             <table>
                 <tr>
-                    <td>hue</td>
+                    <td>Hue</td>
                     <td id="slider1Container"></td>
                 </tr>
                 <tr>
-                    <td>saturation</td>
+                    <td>Saturation</td>
                     <td id="slider2Container"></td>
                 </tr>
                 <tr>
-                    <td>brightness</td>
+                    <td>Lightness</td>
                     <td id="slider3Container"></td>
                 </tr>
                 <tr>
